--- a/feeds.html
+++ b/feeds.html
@@ -1,95 +1,100 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SeaConnect Feeds</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>SeaConnect Feeds</title>
 
-  <style>
-    body{
-      margin:0;
-      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
-      background:linear-gradient(180deg,#0f172a,#1e293b);
-      color:#f1f5f9;
-    }
-    .page{ display:none; padding:20px; padding-bottom:95px; }
-    .card{
-      background:rgba(255,255,255,0.06);
-      backdrop-filter:blur(12px);
-      border:1px solid rgba(255,255,255,0.08);
-      padding:18px;
-      border-radius:22px;
-      margin-bottom:16px;
-      box-shadow:0 10px 30px rgba(0,0,0,.35);
-    }
-    input, textarea{
-      width:100%;
-      padding:12px;
-      border-radius:14px;
-      border:1px solid rgba(255,255,255,0.15);
-      margin-top:6px;
-      box-sizing:border-box;
-      background:rgba(255,255,255,0.05);
-      color:#fff;
-      outline:none;
-    }
-    textarea{ min-height:90px; resize:vertical; }
-    button{
-      padding:11px 16px;
-      border:none;
-      border-radius:14px;
-      font-weight:700;
-      cursor:pointer;
-      transition:all .2s ease;
-    }
-    button:hover{ transform:translateY(-1px); opacity:.95; }
-    .primary{ background:linear-gradient(135deg,#3b82f6,#2563eb); color:#fff; }
-    .danger{ background:linear-gradient(135deg,#ef4444,#dc2626); color:#fff; }
-    .light{ background:rgba(255,255,255,0.1); color:#fff; }
-    .row{ display:flex; gap:10px; margin-top:12px; align-items:center; }
-    .row > button{ flex:0 0 auto; }
-    .subText{ font-size:13px; color:#94a3b8; }
-    .feedPhoto{
-      width:100%;
-      margin-top:10px;
-      border-radius:16px;
-      object-fit:cover;
-      border:1px solid rgba(255,255,255,0.1);
-    }
-    .comment{
-      padding:8px 10px;
-      border-radius:14px;
-      background:rgba(255,255,255,0.06);
-      border:1px solid rgba(255,255,255,0.08);
-      margin-top:8px;
-      font-size:13px;
-    }
-    .topbar{
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      gap:10px;
-      margin-bottom:12px;
-    }
-    .title{ font-size:22px; font-weight:900; }
-    .likeBtn{ background:rgba(255,255,255,0.08); color:#fff; }
-    .likeBtn.liked{ background:rgba(59,130,246,0.25); border:1px solid rgba(59,130,246,0.6); }
-  </style>
+<style>
+body{
+margin:0;
+font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
+background:linear-gradient(180deg,#0f172a,#1e293b);
+color:#f1f5f9;
+}
+
+.page{ display:none; padding:20px; padding-bottom:95px; }
+
+.card{
+background:rgba(255,255,255,0.06);
+backdrop-filter:blur(12px);
+border:1px solid rgba(255,255,255,0.08);
+padding:18px;
+border-radius:22px;
+margin-bottom:16px;
+box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+
+input, textarea{
+width:100%;
+padding:12px;
+border-radius:14px;
+border:1px solid rgba(255,255,255,0.15);
+margin-top:6px;
+box-sizing:border-box;
+background:rgba(255,255,255,0.05);
+color:#fff;
+}
+
+textarea{ min-height:90px; }
+
+button{
+padding:11px 16px;
+border:none;
+border-radius:14px;
+font-weight:700;
+cursor:pointer;
+}
+
+.primary{ background:linear-gradient(135deg,#3b82f6,#2563eb); color:#fff; }
+.danger{ background:linear-gradient(135deg,#ef4444,#dc2626); color:#fff; }
+.light{ background:rgba(255,255,255,0.1); color:#fff; }
+
+.row{ display:flex; gap:10px; margin-top:12px; }
+
+.subText{ font-size:13px; color:#94a3b8; }
+
+.feedPhoto{
+width:100%;
+margin-top:10px;
+border-radius:16px;
+}
+
+.comment{
+padding:8px;
+margin-top:6px;
+background:rgba(255,255,255,0.06);
+border-radius:12px;
+font-size:13px;
+}
+
+.topbar{
+display:flex;
+justify-content:space-between;
+align-items:center;
+margin-bottom:12px;
+}
+
+.title{ font-size:22px; font-weight:900; }
+
+.likeBtn{ background:rgba(255,255,255,0.08); color:#fff; }
+.likeBtn.liked{ background:rgba(59,130,246,0.25); }
+
+</style>
 </head>
 
 <body>
 
-  <div id="feedsPage" class="page" style="display:block;">
-    <div class="topbar">
-      <div>
-        <div class="title">📰 Crew Feeds</div>
-        <div class="subText">Logged in as: <span id="who"></span></div>
-      </div>
-      <button class="danger" onclick="logout()">Logout</button>
-    </div>
+<div id="feedsPage" class="page" style="display:block;">
 
-    <!-- CREATE POST -->
-<!-- CREATE POST -->
+<div class="topbar">
+<div>
+<div class="title">📰 Crew Feeds</div>
+<div class="subText">Logged in as: <span id="who"></span></div>
+</div>
+<button class="danger" onclick="logout()">Logout</button>
+</div>
+
 <div class="card">
 
 <div style="font-weight:900;margin-bottom:8px;">Create Post</div>
@@ -99,290 +104,309 @@
 <input type="file" id="feedPhoto" accept="image/*">
 
 <img id="previewPhoto"
-style="width:100%;margin-top:10px;border-radius:16px;border:1px solid rgba(255,255,255,0.15);display:none;">
+style="width:100%;margin-top:10px;border-radius:16px;display:none;">
+
 <div class="row">
 <button class="primary" onclick="createFeed()">Post</button>
 </div>
 
-<div id="postMsg" class="subText" style="margin-top:10px;"></div>
+<div id="postMsg" class="subText"></div>
 
 </div>
 
-    <!-- FEEDS LIST -->
-    <div id="feedsList"></div>
-  </div>
+<div id="feedsList"></div>
+
+</div>
 
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-  import {
-    getFirestore,
-    collection,
-    addDoc,
-    query,
-    orderBy,
-    onSnapshot,
-    doc,
-    getDoc,
-    deleteDoc,
-    updateDoc,
-    where
-  } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  const firebaseConfig={
-    apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
-    authDomain:"seaconnect-d2baa.firebaseapp.com",
-    projectId:"seaconnect-d2baa"
-  };
+import { initializeApp } from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
-  const app=initializeApp(firebaseConfig);
-  const auth=getAuth(app);
-  const db=getFirestore(app);
+import {
+getAuth,
+onAuthStateChanged,
+signOut
+}
+from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
-  const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
+import {
+getFirestore,
+collection,
+addDoc,
+query,
+orderBy,
+onSnapshot,
+doc,
+getDoc,
+deleteDoc,
+updateDoc,
+where
+}
+from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  let currentUID=null;
-  let currentName="Crew";
-  let currentEmail="";
-  let feedsListenerStarted=false;
+const firebaseConfig={
+apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
+authDomain:"seaconnect-d2baa.firebaseapp.com",
+projectId:"seaconnect-d2baa"
+};
 
-  const feedsList=document.getElementById("feedsList");
-  const who=document.getElementById("who");
-  const postMsg=document.getElementById("postMsg");
+const app=initializeApp(firebaseConfig);
+const auth=getAuth(app);
+const db=getFirestore(app);
 
-  function setPostMsg(t){ postMsg.innerText = t || ""; }
+const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
 
-  onAuthStateChanged(auth, async (user)=>{
-    if(!user){
-      alert("Login first");
-      return;
-    }
+let currentUID=null;
+let currentName="Crew";
+let currentEmail="";
 
-    currentUID=user.uid;
-    currentEmail=user.email || "";
-    who.innerText = currentEmail;
+const feedsList=document.getElementById("feedsList");
+const who=document.getElementById("who");
+const postMsg=document.getElementById("postMsg");
 
-    // get name from users/{uid}
-    try{
-      const snap=await getDoc(doc(db,"users",currentUID));
-      if(snap.exists()){
-        const d=snap.data()||{};
-        currentName = d.name || (currentEmail.includes("@") ? currentEmail.split("@")[0] : "Crew");
-      }else{
-        currentName = (currentEmail.includes("@") ? currentEmail.split("@")[0] : "Crew");
-      }
-      who.innerText = currentName + " (" + currentEmail + ")";
-    }catch(e){
-      console.log(e);
-    }
-
-    if(!feedsListenerStarted){
-      feedsListenerStarted=true;
-      loadFeeds();
-    }
-  });
-
-  // CREATE POST
-  window.createFeed = async function(){
-    try{
-      if(!currentUID) return alert("Please login first.");
-
-      const text=document.getElementById("feedInput").value.trim();
-      const file=document.getElementById("feedPhoto").files[0];
-
-      if(!text && !file){
-        alert("Write something or choose a photo.");
-        return;
-      }
-
-      setPostMsg("Posting...");
-rules_version = '2';
-service cloud.firestore {
-match /databases/{database}/documents {
-
-match /{document=**} {
-allow read, write: if true;
+function setPostMsg(t){
+postMsg.innerText=t||"";
 }
 
+onAuthStateChanged(auth,async(user)=>{
+
+if(!user){
+alert("Login first");
+return;
 }
+
+currentUID=user.uid;
+currentEmail=user.email||"";
+
+who.innerText=currentEmail;
+
+const snap=await getDoc(doc(db,"users",currentUID));
+
+if(snap.exists()){
+const d=snap.data();
+currentName=d.name||currentEmail.split("@")[0];
 }
-     else{
-console.log(data);
+
+who.innerText=currentName+" ("+currentEmail+")";
+
+loadFeeds();
+
+});
+
+window.createFeed=async function(){
+
+try{
+
+const text=document.getElementById("feedInput").value.trim();
+const file=document.getElementById("feedPhoto").files[0];
+
+if(!text && !file){
+alert("Write something or choose a photo");
+return;
+}
+
+setPostMsg("Posting...");
+
+let photoURL="";
+
+if(file){
+
+const formData=new FormData();
+formData.append("image",file);
+
+const res=await fetch(
+"https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
+{method:"POST",body:formData}
+);
+
+const data=await res.json();
+
+if(data.success){
+photoURL=data.data.url;
+}else{
 alert("Photo upload failed");
 return;
 }
-      }
 
-      await addDoc(collection(db,"feeds"),{
-        uid: currentUID,
-        name: currentName,
-        email: currentEmail,
-        text: text,
-        photo: photoURL,
-        likes: [],          // ✅ per-user likes
-        createdAt: Date.now()
-      });
+}
 
-     document.getElementById("feedInput").value="";
+await addDoc(collection(db,"feeds"),{
+uid:currentUID,
+name:currentName,
+email:currentEmail,
+text:text,
+photo:photoURL,
+likes:[],
+createdAt:Date.now()
+});
+
+document.getElementById("feedInput").value="";
 document.getElementById("feedPhoto").value="";
 document.getElementById("previewPhoto").style.display="none";
-      setPostMsg("✅ Posted!");
-      setTimeout(()=>setPostMsg(""),1200);
 
-    }
-    catch(e){
-console.error("POST ERROR:",e);
-alert("Post failed: " + e.message);
+setPostMsg("✅ Posted!");
+
+setTimeout(()=>setPostMsg(""),1500);
+
+}catch(e){
+
+console.error(e);
+alert("Post failed: "+e.message);
+
 }
-  };
 
-  // LOAD FEEDS
-  function loadFeeds(){
-    const q=query(collection(db,"feeds"), orderBy("createdAt","desc"));
+};
 
-    onSnapshot(q,(snap)=>{
-      feedsList.innerHTML="";
+function loadFeeds(){
 
-      snap.forEach(docSnap=>{
-        const d=docSnap.data()||{};
-        const id=docSnap.id;
+const q=query(collection(db,"feeds"),orderBy("createdAt","desc"));
 
-        const date = d.createdAt ? new Date(d.createdAt).toLocaleString() : "";
-        const likesArr = Array.isArray(d.likes) ? d.likes : [];
-        const liked = likesArr.includes(currentUID);
-        const likeCount = likesArr.length;
+onSnapshot(q,(snap)=>{
 
-        feedsList.innerHTML += `
-          <div class="card">
-            <div style="display:flex;justify-content:space-between;align-items:flex-start;gap:10px;">
-              <div>
-                <div style="font-weight:900">${escapeHtml(d.name || "Crew")}</div>
-                <div class="subText">${escapeHtml(d.email || "")}</div>
-              </div>
-              <div class="subText">${escapeHtml(date)}</div>
-            </div>
+feedsList.innerHTML="";
 
-            <div style="margin-top:10px;white-space:pre-wrap;">${escapeHtml(d.text || "")}</div>
+snap.forEach(docSnap=>{
 
-            ${d.photo ? `<img src="${d.photo}" class="feedPhoto" loading="lazy">` : ""}
+const d=docSnap.data();
+const id=docSnap.id;
 
-            <div class="row" style="margin-top:12px;">
-              <button class="likeBtn ${liked ? "liked" : ""}" onclick="toggleLike('${id}')">
-                ${liked ? "💙 Liked" : "👍 Like"}
-              </button>
-              <span class="subText">${likeCount} likes</span>
+const likesArr=d.likes||[];
+const liked=likesArr.includes(currentUID);
 
-              ${d.uid===currentUID ? `
-                <button class="danger" onclick="deletePost('${id}')">Delete</button>
-              ` : ``}
-            </div>
+feedsList.innerHTML+=`
 
-            <div style="margin-top:12px;">
-              <input id="commentInput-${id}" placeholder="Write comment">
-              <div class="row">
-                <button class="light" onclick="sendComment('${id}')">Send</button>
-              </div>
-              <div id="comments-${id}" style="margin-top:10px;"></div>
-            </div>
-          </div>
-        `;
+<div class="card">
 
-        loadComments(id); // real-time per post
-      });
-    });
-  }
+<div style="font-weight:900">${d.name}</div>
 
-  // LIKE TOGGLE
-  window.toggleLike = async function(feedId){
-    try{
-      const ref=doc(db,"feeds",feedId);
-      const snap=await getDoc(ref);
-      if(!snap.exists()) return;
+<div class="subText">${d.email}</div>
 
-      const d=snap.data()||{};
-      let likes=Array.isArray(d.likes) ? d.likes : [];
+<div style="margin-top:10px">${d.text||""}</div>
 
-      if(likes.includes(currentUID)){
-        likes = likes.filter(x=>x!==currentUID);
-      }else{
-        likes.push(currentUID);
-      }
+${d.photo?`<img src="${d.photo}" class="feedPhoto">`:""}
 
-      await updateDoc(ref,{likes:likes});
-    }catch(e){
-      console.error(e);
-      alert("❌ Like failed");
-    }
-  };
+<div class="row">
 
-  // DELETE POST
-  window.deletePost = async function(id){
-    try{
-      if(confirm("Delete post?")){
-        await deleteDoc(doc(db,"feeds",id));
-      }
-    }catch(e){
-      console.error(e);
-      alert("❌ Delete failed");
-    }
-  };
+<button class="likeBtn ${liked?"liked":""}"
+onclick="toggleLike('${id}')">
 
-  // SEND COMMENT
-  window.sendComment = async function(feedId){
-    try{
-      const input=document.getElementById("commentInput-"+feedId);
-      const text=(input.value||"").trim();
-      if(!text) return;
+${liked?"💙 Liked":"👍 Like"}
 
-      await addDoc(collection(db,"comments"),{
-        feedId: feedId,
-        uid: currentUID,
-        name: currentName,
-        text: text,
-        createdAt: Date.now()
-      });
+</button>
 
-      input.value="";
-    }catch(e){
-      console.error(e);
-      alert("❌ Comment failed");
-    }
-  };
+<span class="subText">${likesArr.length} likes</span>
 
-  // LOAD COMMENTS (NO INDEX REQUIRED)
-  function loadComments(feedId){
-    const q=query(collection(db,"comments"), where("feedId","==",feedId));
+${d.uid===currentUID?`
+<button class="danger" onclick="deletePost('${id}')">
+Delete
+</button>
+`:""}
 
-    onSnapshot(q,(snap)=>{
-      const box=document.getElementById("comments-"+feedId);
-      if(!box) return;
+</div>
 
-      const items=[];
-      snap.forEach(ds=>{
-        const d=ds.data()||{};
-        items.push(d);
-      });
+<div style="margin-top:10px">
 
-      // sort in JS (so Firestore doesn't need composite index)
-      items.sort((a,b)=>(a.createdAt||0)-(b.createdAt||0));
+<input id="commentInput-${id}" placeholder="Write comment">
 
-      box.innerHTML="";
-      items.forEach(d=>{
-        box.innerHTML += `
-          <div class="comment">
-            <b>${escapeHtml(d.name || "Crew")}</b>: ${escapeHtml(d.text || "")}
-          </div>
-        `;
-      });
-    });
-  }
+<button onclick="sendComment('${id}')">
+Send
+</button>
 
-  // LOGOUT
-  window.logout = async function(){
-    await signOut(auth);
-    location.reload();
-  };
-document.getElementById("feedPhoto").addEventListener("change",function(){
+<div id="comments-${id}"></div>
+
+</div>
+
+</div>
+
+`;
+
+loadComments(id);
+
+});
+
+});
+
+}
+
+window.toggleLike=async function(feedId){
+
+const ref=doc(db,"feeds",feedId);
+const snap=await getDoc(ref);
+
+let likes=snap.data().likes||[];
+
+if(likes.includes(currentUID)){
+likes=likes.filter(x=>x!==currentUID);
+}else{
+likes.push(currentUID);
+}
+
+await updateDoc(ref,{likes});
+
+};
+
+window.deletePost=async function(id){
+
+if(confirm("Delete post?")){
+await deleteDoc(doc(db,"feeds",id));
+}
+
+};
+
+window.sendComment=async function(feedId){
+
+const input=document.getElementById("commentInput-"+feedId);
+const text=input.value.trim();
+
+if(!text) return;
+
+await addDoc(collection(db,"comments"),{
+feedId:feedId,
+uid:currentUID,
+name:currentName,
+text:text,
+createdAt:Date.now()
+});
+
+input.value="";
+
+};
+
+function loadComments(feedId){
+
+const q=query(collection(db,"comments"),where("feedId","==",feedId));
+
+onSnapshot(q,(snap)=>{
+
+const box=document.getElementById("comments-"+feedId);
+if(!box) return;
+
+box.innerHTML="";
+
+snap.forEach(docSnap=>{
+const d=docSnap.data();
+
+box.innerHTML+=`
+<div class="comment">
+<b>${d.name}</b>: ${d.text}
+</div>
+`;
+});
+
+});
+
+}
+
+window.logout=async function(){
+await signOut(auth);
+location.reload();
+};
+
+document.getElementById("feedPhoto")
+.addEventListener("change",function(){
 
 const file=this.files[0];
 if(!file) return;
@@ -397,15 +421,7 @@ document.getElementById("previewPhoto").style.display="block";
 reader.readAsDataURL(file);
 
 });
-  // small helper to avoid HTML breaking
-  function escapeHtml(str){
-    return String(str||"")
-      .replaceAll("&","&amp;")
-      .replaceAll("<","&lt;")
-      .replaceAll(">","&gt;")
-      .replaceAll('"',"&quot;")
-      .replaceAll("'","&#039;");
-  }
+
 </script>
 
 </body>
